Rename returned service_instance to indicate it is not the same as the request
